Fix the spacing on success and error modals.

--- a/scss/elements/_shop-info.scss
+++ b/scss/elements/_shop-info.scss
@@ -75,6 +75,16 @@
 	text-decoration: none;
 }
 
+.shop-error, .shop-success {
+	h2 {
+		margin-bottom: 1.4em;
+	}
+
+	p {
+		margin-bottom: 2em;
+	}
+}
+
 @media screen and ( max-width: 900px) {
 	.shop-info {
 		position: relative;
